tests/baselines/reference/noImplicitReturnsWithoutReturnExpression(strict=true).errors.txt
noImplicitReturnsWithoutReturnExpression.ts(2,5): error TS2322: Type 'undefined' is not assignable to type 'number'.
noImplicitReturnsWithoutReturnExpression.ts(17,37): error TS7006: Parameter 'x' implicitly has an 'any' type.


==== noImplicitReturnsWithoutReturnExpression.ts (2 errors) ====
    function isMissingReturnExpression(): number {
        return;
        ~~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'number'.
    }
    
    function isMissingReturnExpression2(): any {
        return;
    }
    
    function isMissingReturnExpression3(): number|void {
        return;
    }
    
    function isMissingReturnExpression4(): void {
        return;
    }
    
    function isMissingReturnExpression5(x) {
                                        ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        if (x) {
            return 0;
        }
        else {
            return;
        }
    }
    